<resources>
    <string name="app_name">WeaRther</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_donate">Donate</string>

    <!-- Prefs -->
    <string name="pref_unit_title">Measure unit</string>
    <string name="temp_title">Temperature unit</string>
    <string name="loc_title">Location</string>
    <string name="pref_location_title">Choose the location</string>
    <string name="lang_title">Weather message language</string>
    <string name="summary_lang">Current language</string>
    <string name="pref_lang_title">Select language</string>
    <string name="summary_loc">Current location</string>
    <string name="summary_temp">Current temperature unit</string>
    <string name="provider">data provided by Openweathermap</string>

    <string-array name="unit_names">
        <item>Celsius (Metric system)</item>
        <item>Fahrenheit (Imperial system)</item>
    </string-array>
    <string-array name="unit_values">
        <item>c</item>
        <item>f</item>
    </string-array>
    <string-array name="lang_names">
        <item>English</item>
        <item>Current system language</item>
    </string-array>
    <string-array name="lang_values">
        <item>en</item>
        <item>system</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="cancel">Cancel</string>


    <!-- Tab resources -->
    <string name="tab_current">Current</string>
    <string name="tab_forecast">Forecast</string>

    <!--  rex weather -->

    <string name="attribution">Weather data by OpenWeatherMap.org</string>
    <string name="error_fetch_weather">Could not fetch weather data</string>
    <string name="error_location_unavailable">Could not get current location</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="sky_is_clear">sky is clear</string>
    <string name="nineteen_degrees">19°</string>
    <string name="fifteen_degrees">15°</string>

    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable !</string>

    //from the sqlite database

    <string name="text_tvRowCount">(row number/ total rows)</string>
    <string name="text_Insert">Insert</string>
    <string name="text_Query">Query</string>
    <string name="text_Update">Update</string>
    <string name="text_Delete">Delete</string>
    <string name="text_TitleSpot">衣物</string>
    <string name="text_SpotId">ID Number</string>
    <string name="text_SpotClothes">位置</string>
    <string name="text_SpotType">款式</string>
    <string name="text_SpotColor">顏色</string>
    <string name="text_SpotSleeve">長短袖</string>
    <string name="text_SpotMaterial">材質</string>
    <string name="text_Clear">Clear</string>
    <string name="text_btNext">Next</string>
    <string name="text_btBack">Back</string>
    <string name="text_btCancel">Cancel</string>
    <string name="btTakePicture">Take Picture</string>
    <string name="btLoadPicture">Load Picture</string>


    <string name="text_tvType">款式</string>
    <string name="text_tvSleeve">長短袖</string>
    <string name="text_tvMaterial">材質</string>

    <string name="msg_InsertSuccess">Insert successfully</string>
    <string name="msg_InsertFail">Insert fail</string>
    <string name="msg_NoImage">No image</string>
    <string name="msg_NoDataFound">No data found</string>
    <string name="msg_RowDeleted">row deleted</string>
    <string name="msg_RowUpdated">row updated</string>
    <string name="msg_NoCameraAppsFound">no camera apps found</string>
    <string name="matv1">現在天氣如下</string>
    <string name="matv2">氣溫</string>
    <string name="matv3">濕度</string>
    <string name="maiv1">maiv1</string>
    <string name="maiv2">maiv2</string>
    <string name="maiv3">3</string>
    <string name="mabtn1">下件上衣</string>
    <string name="mabtn2">下件下褲</string>
    <string name="mabtn3">下雙鞋子</string>
    <string name="mabtn4">上件上衣</string>
    <string name="mabtn5">上件下褲</string>
    <string name="mabtn6">上雙鞋子</string>
    <string name="text_tvColor">顏色</string>
    <string name="iatop">上衣</string>
    <string name="iabot">褲子</string>
    <string name="iashoe">鞋子</string>

</resources>
