<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/matv1"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/matv2"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView5"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="50dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/ivSpot"
        android:contentDescription="@string/maiv1"
        android:layout_toStartOf="@+id/button7"
        android:layout_marginTop="200dp"
        android:layout_marginRight="100dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageView3"
        android:contentDescription="@string/maiv2"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/imageView4" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageView4"
        android:contentDescription="@string/maiv3"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="←"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/ivSpot"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="←"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button8"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="←"
        android:id="@+id/button3"
        android:layout_above="@+id/imageView4"
        android:layout_toStartOf="@+id/textView5"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="→"
        android:id="@+id/button7"
        android:layout_alignBottom="@+id/ivSpot"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="→"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="→"
        android:id="@+id/button9"
        android:layout_above="@+id/imageView4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>